client/site.css
.test {
    border: 1px black dotted;
    background-color: rgba(0, 0, 0, 0.05);
}

#property-container {
    display: flex;
    flex-direction: column;
}

.property {
    display: flex;
    text-align: center;
    border: 1px black solid;
}

.property-title {
    flex-grow: 3;
    border-right: 1px black solid;
}

.property-description {
    flex-grow: 2;
}

.description {
    border-bottom: 1px black solid;
}

.field {
    margin: 3px;
}

.center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

